<resources>
    <string name="app_name">SMaRT</string>
    <string name="body_scheme">Body scheme</string>
    <string name="back_view">Back view</string>
    <string name="front_view">Front view</string>
    <string name="brush_erase">Clear</string>
    <string name="brush_line">Line</string>
    <string name="brush_region">Region</string>
    <string name="subject">Subject</string>
    <string name="title_add_sense">New drawing</string>
    <string name="new_record">New record</string>
    <string name="complete_recording">Complete recording</string>
    <string name="switch_bodyview">Switch body view</string>
    <string name="button_sensations_toolkit">Show sensations</string>
    <string name="toast_select_tag">⇚ Please first select a sensation tag(s)</string>
    <string name="toast_select_intensity">⇛ Please first select an intensity on the scale</string>
    <string name="toast_empty_name">Please first enter a name for the subject</string>
    <string name="toast_media_permission">Please grant the app permission to access the media</string>
    <string name="toast_body_figure_not_copied">Some of the body figures could not be copied</string>
    <string name="toast_body_figures_folder_empty">There are no body figures images in the "body_figures" folder</string>
    <string name="toast_instructions_not_copied">Some of the instruction images could not be copied</string>
    <string name="textview_max">max</string>
    <string name="textview_min">min</string>
    <string name="to_drawing">To drawing</string>
    <string name="to_tags">To tags</string>
    <string name="add_new_subject">Create new subject</string>
    <string name="other_sensation">Other sensation</string>
    <string name="subjects">
        <b>Subjects:</b>
    </string>
    <string name="records">
        <b>Records:</b>
    </string>
    <string name="sensation">Sensation</string>
    <string name="new_subject">New subject name</string>
    <string name="password">1985</string>
    <string name="wrong_password">Wrong password</string>
    <string name="textview_general_view">General view</string>
    <string name="textview_next_view">Next view</string>

    <!-- Dialogs -->
    <string name="dialog_drawing_completed">"Did you really draw <b>all Symptoms</b>? Subsequent editing is not possible."
    </string>
    <string name="dialog_delete_subject">"Do you want to delete the subject and <b>all their Data?</b>?"
    </string>
    <string name="dialog_delete_record">"Do you want to delete selected record?"</string>
    <string name="dialog_drawing_confirmed">"Finish Drawing"</string>
    <string name="dialog_save_images">"The unsaved images will be deleted. Would you like to proceed to subject overview?"</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_no">No</string>
    <string name="dialog_image">Overview</string>
    <string name="dialog_close">Hide</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_password_title">Enter the password</string>
    <string name="dialog_change_name_title">Enter the new name for the selected subject</string>
    <string name="dialog_password_hint">Password</string>
    <string name="dialog_change_name_hint">Subject name</string>
    <string name="dialog_choose_color">Choose color</string>
    <string name="dialog_line_width">Line Width: %d</string>
    <string name="dialog_select_config">Select configuration</string>
    <string name="dialog_config_mismatch">The selected config doesn\'t match the subject\'s setting\n
        Create a new patient or choose another configuration.
    </string>
    <string name="dialog_config_no_scheme">One or more body schemes specified in the config is not presented
        in the "SMaRT/config/body_schemes" folder.\n
        Please check the configuration file and the folder content.\n
        The app will use the default configuration.
    </string>
    <string name="dialog_continue_last_step">The application memory contains an unsaved painting. Do you want to continue with this record?</string>

    <string name="menu_remove_subject">Remove selected subject and their records</string>
    <string name="menu_change_name">Change subject\'s name</string>
    <string name="menu_remove_record">Remove selected record</string>
    <string name="menu_show_image">Display overview</string>
    <string name="menu_share">Share this record</string>
    <string name="menu_export_title">Sensations of %1$s at %2$s</string>
    <string name="menu_instructions">Instructions</string>
    <string name="menu_show_instructions">Show instructions before recordings</string>
    <string name="menu_request_password">Request password after recording</string>
    <string name="menu_show_names">Show subject names</string>
    <string name="menu_custom_config">Use custom configuration</string>
    <string name="menu_selected_config">Config profile:</string>
    <string name="menu_selected_config_default">Config profile: Built-in</string>
    <string name="menu_imprint">Imprint</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_info">Information page</string>
    <string name="menu_copyright">Copyright notice</string>
    <string name="menu_created">created</string>
    <string name="menu_record">Record</string>
    <string name="menu_config">config</string>

    <!-- Shared Preferences -->
    <string name="sp_show_instructions">show_instructions</string>
    <string name="sp_request_password">request_password</string>
    <string name="sp_show_names">sp_show_names</string>
    <string name="sp_custom_config">sp_custom_config</string>
    <string name="sp_custom_config_path">sp_custom_config_path</string>
    <string name="sp_selected_config">sp_selected_config</string>

    <!-- List of sensation types -->
    <string name="sensation_type_1">Burning</string>
    <string name="sensation_type_2">Cold</string>
    <string name="sensation_type_3">Cramping</string>
    <string name="sensation_type_4">Dull</string>
    <string name="sensation_type_5">Electric</string>
    <string name="sensation_type_6">Heavy</string>
    <string name="sensation_type_7">Hot</string>
    <string name="sensation_type_8">Numb</string>
    <string name="sensation_type_9">Pressing</string>
    <string name="sensation_type_10">Pricking</string>
    <string name="sensation_type_11">Radiating</string>
    <string name="sensation_type_12">Shooting</string>
    <string name="sensation_type_13">Stinging</string>
    <string name="sensation_type_14">Tender</string>
    <string name="sensation_type_15">Throbbing</string>
    <string name="sensation_type_16">Tingling</string>
    <string name="sensation_type_17">Tugging</string>
    <string-array name="sensation_types">
        <item>@string/sensation_type_1</item>
        <item>@string/sensation_type_2</item>
        <item>@string/sensation_type_3</item>
        <item>@string/sensation_type_4</item>
        <item>@string/sensation_type_5</item>
        <item>@string/sensation_type_6</item>
        <item>@string/sensation_type_7</item>
        <item>@string/sensation_type_8</item>
        <item>@string/sensation_type_9</item>
        <item>@string/sensation_type_10</item>
        <item>@string/sensation_type_11</item>
        <item>@string/sensation_type_12</item>
        <item>@string/sensation_type_13</item>
        <item>@string/sensation_type_14</item>
        <item>@string/sensation_type_15</item>
        <item>@string/sensation_type_16</item>
        <item>@string/sensation_type_17</item>
    </string-array>

    <!-- List of schemes -->
    <string name="scheme_neutral">Neutral</string>
    <string name="scheme_male">Male</string>
    <string name="scheme_female">Female</string>


    <string-array name="schemes">
        <item>@string/scheme_neutral</item>
        <item>@string/scheme_female</item>
        <item>@string/scheme_male</item>
    </string-array>

</resources>