<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
    android:layout_centerVertical="true">

    <TextView android:id="@+id/text_view_title" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_margin="10dp"
        android:text="@string/dialog_change_name_title" android:textSize="24sp" android:textStyle="bold" />

    <EditText android:id="@+id/edit_text_name" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_below="@id/text_view_title" android:layout_centerHorizontal="true" android:layout_marginStart="10dp"
        android:layout_marginTop="10dp" android:layout_marginEnd="10dp" android:layout_marginBottom="10dp"
        android:autofillHints="Enter the new name for the subject" android:ems="10" android:gravity="center"
        android:hint="@string/dialog_change_name_hint" android:inputType="" android:textColorHint="#A1887F" android:textSize="30sp" />

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/edit_text_name">
        <Button android:id="@+id/button_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_alignParentStart="true" android:text="@string/dialog_cancel" android:layout_marginStart="50sp"
            android:layout_marginBottom="10dp" tools:ignore="RelativeOverlap" />
        <Button android:id="@+id/button_ok" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" android:text="@string/dialog_ok" android:layout_marginEnd="50sp"
            android:layout_marginBottom="10dp" tools:ignore="RelativeOverlap" />
    </RelativeLayout>

</RelativeLayout>