<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubjectFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edittext_patient_name"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.55"
                android:autofillHints="@string/new_subject"
                android:ems="10"
                android:hint="@string/new_subject"
                android:inputType="textPersonName"
                android:state_focused="false"
                android:textSize="20sp"
                tools:ignore="LabelFor" />

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <TextView
                    android:text="@string/body_scheme"
                    android:layout_marginBottom="5sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/spinner_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:id="@+id/button_add_patient"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/add_new_patient" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_marginEnd="10sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginTop="20sp"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/subjects"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_view_patients"
                    android:layout_marginTop="10sp"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:longClickable="false">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20sp"
                android:layout_marginStart="10sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/records"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="10sp"
                    android:id="@+id/list_view_records"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>